--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                     <a href="#features" class="hover:text-blue-400 transition-colors">주요기능</a>
                     <a href="#architecture" class="hover:text-blue-400 transition-colors">아키텍처</a>
                                          <a href="#market" class="hover:text-blue-400 transition-colors">시장분석</a>
-                     <a href="demo-showcase.html" class="bg-gradient-to-r from-blue-500 to-purple-600 px-4 py-2 rounded-lg hover:from-blue-600 hover:to-purple-700 transition-all">실시간 데모</a>
-                     <a href="gpt-systems.html" class="bg-gradient-to-r from-emerald-500 to-green-600 px-4 py-2 rounded-lg hover:from-emerald-600 hover:to-green-700 transition-all">AI 시스템</a>
+                     <a href="portfolio/demo-showcase.html" class="bg-gradient-to-r from-blue-500 to-purple-600 px-4 py-2 rounded-lg hover:from-blue-600 hover:to-purple-700 transition-all">실시간 데모</a>
+                     <a href="portfolio/gpt-systems.html" class="bg-gradient-to-r from-emerald-500 to-green-600 px-4 py-2 rounded-lg hover:from-emerald-600 hover:to-green-700 transition-all">AI 시스템</a>
                 </div>
             </div>
         </div>
@@ -150,7 +150,7 @@
             </div>
             
             <div class="text-center">
-                <a href="demo-showcase.html" class="inline-flex items-center bg-gradient-to-r from-blue-500 to-purple-600 hover:from-blue-600 hover:to-purple-700 text-white font-bold py-4 px-8 rounded-full text-lg transition-all transform hover:scale-105 shadow-lg hover:shadow-xl">
+                <a href="portfolio/demo-showcase.html" class="inline-flex items-center bg-gradient-to-r from-blue-500 to-purple-600 hover:from-blue-600 hover:to-purple-700 text-white font-bold py-4 px-8 rounded-full text-lg transition-all transform hover:scale-105 shadow-lg hover:shadow-xl">
                     <i class="fas fa-play mr-3"></i>
                     실시간 데모 체험하기
                 </a>
