--- a/portfolio/demo-showcase.html
+++ b/portfolio/demo-showcase.html
@@ -116,7 +116,7 @@
                         <div class="w-2 h-2 bg-green-400 rounded-full live-indicator mr-2"></div>
                         <span class="text-sm">실시간 운영 중</span>
                     </div>
-                    <a href="index.html" class="hover:text-blue-400 transition-colors">← 메인으로</a>
+                    <a href="../index.html" class="hover:text-blue-400 transition-colors">← 메인으로</a>
                 </div>
             </div>
         </div>
@@ -380,51 +380,51 @@
     </footer>
 
     <script>
-                 const demoData = {
-             toolbox: {
-                 title: "ToolBox Enterprise",
-                 description: "엔터프라이즈 관리 대시보드 - 실시간 데이터 모니터링 및 분석",
-                 url: "../ToolBox_Enterprise/index.html",
-                 tech: "HTML5, CSS3, JavaScript, Tailwind CSS, Google Apps Script",
-                 users: "100+ 활성 사용자"
+        const demoData = {
+            toolbox: {
+                title: "ToolBox Enterprise",
+                description: "엔터프라이즈 관리 대시보드 - 실시간 데이터 모니터링 및 분석",
+                url: "ToolBox_Enterprise/index.html",
+                tech: "HTML5, CSS3, JavaScript, Tailwind CSS, Google Apps Script",
+                users: "100+ 활성 사용자"
+            },
+                          technical: {
+                 title: "기술개발 요청 시스템",
+                 description: "Google Apps Script API 연동 기술개발 요청 접수 및 관리 시스템",
+                 url: "Technical_Request/index.html",
+                 tech: "HTML5, CSS3, JavaScript, Google Apps Script, Apps Script API",
+                 users: "30+ 활성 사용자"
              },
-                           technical: {
-                  title: "기술개발 요청 시스템",
-                  description: "Google Apps Script API 연동 기술개발 요청 접수 및 관리 시스템",
-                  url: "../Technical_Request/index.html",
-                  tech: "HTML5, CSS3, JavaScript, Google Apps Script, Apps Script API",
-                  users: "30+ 활성 사용자"
-              },
-             'care-order': {
-                 title: "주문 관리 시스템",
-                 description: "산후조리원 배정금 구매 및 관리 시스템",
-                 url: "../care-order/index.html",
-                 tech: "HTML5, CSS3, JavaScript, 반응형 웹 디자인",
-                 users: "50+ 활성 사용자"
-             },
-             magazine: {
-                 title: "사내 매거진 시스템",
-                 description: "실시간 커뮤니케이션 및 정보 공유 플랫폼",
-                 url: "../In-house-Magazine/index.html",
-                 tech: "HTML5, CSS3, JavaScript, Google Apps Script",
-                 users: "80+ 활성 사용자"
-             },
-             scheduler: {
-                 title: "팀 스케줄러",
-                 description: "실시간 팀 일정 관리 및 협업 도구",
-                 url: "../TeamScheduler/index.html",
-                 tech: "HTML5, CSS3, JavaScript, Google Apps Script",
-                 users: "40+ 활성 사용자"
-             },
-             feedback: {
-                 title: "피드백 시스템",
-                 description: "고객 리뷰 분석 및 피드백 관리 시스템",
-                 url: "../Feedback-BOX/index.html",
-                 tech: "HTML5, CSS3, JavaScript, Google Apps Script",
-                 users: "25+ 활성 사용자"
-             },
+            'care-order': {
+                title: "주문 관리 시스템",
+                description: "산후조리원 배정금 구매 및 관리 시스템",
+                url: "care-order/index.html",
+                tech: "HTML5, CSS3, JavaScript, 반응형 웹 디자인",
+                users: "50+ 활성 사용자"
+            },
+            magazine: {
+                title: "사내 매거진 시스템",
+                description: "실시간 커뮤니케이션 및 정보 공유 플랫폼",
+                url: "In-house-Magazine/index.html",
+                tech: "HTML5, CSS3, JavaScript, Google Apps Script",
+                users: "80+ 활성 사용자"
+            },
+            scheduler: {
+                title: "팀 스케줄러",
+                description: "실시간 팀 일정 관리 및 협업 도구",
+                url: "TeamScheduler/index.html",
+                tech: "HTML5, CSS3, JavaScript, Google Apps Script",
+                users: "40+ 활성 사용자"
+            },
+            feedback: {
+                title: "피드백 시스템",
+                description: "고객 리뷰 분석 및 피드백 관리 시스템",
+                url: "Feedback-BOX/index.html",
+                tech: "HTML5, CSS3, JavaScript, Google Apps Script",
+                users: "25+ 활성 사용자"
+            },
 
-         };
+        };
 
         function loadDemo(system) {
             const demo = demoData[system];
@@ -464,7 +464,7 @@
          
          function openToolBoxDownload() {
              // 새 창에서 ToolBox 다운로드 페이지 열기
-             window.open('https://agency8group.github.io/tool-box/', '_blank', 'width=1200,height=800');
+             window.open('https://drive.google.com/file/d/1Qy_Cf2T8mWuqhE6_MPsv5_g8w3n9xqZ-/view?usp=drive_link', '_blank', 'width=1200,height=800');
              
              // 사용자에게 알림
              setTimeout(() => {
