--- a/portfolio/gpt-systems.html
+++ b/portfolio/gpt-systems.html
@@ -78,7 +78,7 @@
                         <div class="w-2 h-2 bg-green-400 rounded-full mr-2"></div>
                         <span class="text-sm">실시간 운영 중</span>
                     </div>
-                    <a href="index.html" class="hover:text-blue-400 transition-colors">← 메인으로</a>
+                    <a href="../index.html" class="hover:text-blue-400 transition-colors">← 메인으로</a>
                 </div>
             </div>
         </div>
@@ -245,7 +245,7 @@
                 OpenAI GPT 기반의 실시간 AI 솔루션
             </p>
             <div class="flex justify-center space-x-6 text-gray-400">
-                <a href="index.html" class="hover:text-blue-400 transition-colors">
+                <a href="../index.html" class="hover:text-blue-400 transition-colors">
                     <i class="fas fa-home text-xl"></i>
                 </a>
                 <a href="demo-showcase.html" class="hover:text-blue-400 transition-colors">
