--- a/portfolio/demo-showcase.html
+++ b/portfolio/demo-showcase.html
@@ -398,7 +398,7 @@
             'care-order': {
                 title: "주문 관리 시스템",
                 description: "산후조리원 배정금 구매 및 관리 시스템",
-                url: "care-order/index.html",
+                url: "https://eibe-care-order.netlify.app/",
                 tech: "HTML5, CSS3, JavaScript, 반응형 웹 디자인",
                 users: "50+ 활성 사용자"
             },
